Enhance Water Well upgrade UI and plot fertility logic

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3415,7 +3415,7 @@
   "statements.frankie.plaza": "Travel to the plaza to craft rare decorations!",
   "statements.blacksmith.plaza": "Travel to the Plaza for more rare items.",
   "statements.water.well.needed.one": "Additional Water Well required.",
-  "statements.water.well.needed.two": "In order to support more crops, build a well.",
+  "statements.water.well.needed.two": "In order to support more crops, build or upgrade your well.",
   "statements.soldOut": "Sold out",
   "statements.soldOutWearables": "View sold out wearables",
   "statements.craft.composter": "Craft at Composter",
