--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3414,8 +3414,11 @@
   "statements.chest.captcha": "Tap the chest to open it",
   "statements.frankie.plaza": "Travel to the plaza to craft rare decorations!",
   "statements.blacksmith.plaza": "Travel to the Plaza for more rare items.",
-  "statements.water.well.needed.one": "Additional Water Well required.",
-  "statements.water.well.needed.two": "In order to support more crops, build or upgrade your well.",
+  "statements.water.well.needed.one": "Build water well to support more crops",
+  "statements.water.well.needed.two": "In order to support more crops, build your well.",
+  "statements.water.well.needed.three": "Place water well to support more crops",
+  "statements.upgrade.water.well": "Upgrade Water Well to support more crops",
+
   "statements.soldOut": "Sold out",
   "statements.soldOutWearables": "View sold out wearables",
   "statements.craft.composter": "Craft at Composter",
