--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3968,6 +3968,12 @@
   "upgrade.building": "Upgrade {{building}}",
   "upgrade.building.nextLevel": "Next Level:",
   "upgrade.intro": "Hey there bumpkin, looking to upgrade your {{building}} so you can get yourself some more {{animals}}?",
+  "upgrade.intro.water.well": "Hey there Bumpkin! Looking to upgrade your {{building}} to increase fertility of your plots?",
+  "upgrade.sheep.cows": "sheep and cows",
+  "upgrade.chickens": "chickens",
+  "upgrade.unlockAllPlots": "Unlocks all plot fertility",
+  "upgrade.plusPlotFertility": "+{{amount}} plot fertility",
+  "upgrade.capacityIncrease": "+{{amount}} capacity",
   "upgrade": "Upgrade",
   "animals.buy": "Buy {{animal}}",
   "capacity": "Capacity",
