[FEAT] Make Water Well upgradable (#5254)
* [FEAT] Make Water Well upgradable

* Apply Water Well levels to no of crops

* fix tsc

* fix error

* more test fix

* Add Water Well upgrade mechanics and level requirements

* Remove AnimalBuildingLevel type and update building level references

* Enhance Water Well upgrade UI and plot fertility logic

* Stealth fix add to queue button

* Add Water Well Upgrade Images

* Use existing upgrade building modal

* fix tsc

* Add Water Well to Garbo

* fix sunnyside summer wells

* add comments

* remove limit checks (it's incorporated in getItemCount)

* Fix garbage item count limit logic for collectibles and wardrobe items

* Set upgrade times

* Plots are not activated until upgrade is finished

* Add speed up upgrade functionality for buildings

* Add building level support to item icons

* Simplify to reduce use of nested conditionals

* Refactor for readability

Co-authored-by: spencer <spencer@sunflower-land.com>

* Update water well messaging based on placement and inventory status

* Internationalize upgrade messaging and refactor building upgrade checks

---------

Co-authored-by: spencer <spencer@sunflower-land.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3414,8 +3414,11 @@
   "statements.chest.captcha": "Tap the chest to open it",
   "statements.frankie.plaza": "Travel to the plaza to craft rare decorations!",
   "statements.blacksmith.plaza": "Travel to the Plaza for more rare items.",
-  "statements.water.well.needed.one": "Additional Water Well required.",
-  "statements.water.well.needed.two": "In order to support more crops, build a well.",
+  "statements.water.well.needed.one": "Build water well to support more crops",
+  "statements.water.well.needed.two": "In order to support more crops, build your well.",
+  "statements.water.well.needed.three": "Place water well to support more crops",
+  "statements.upgrade.water.well": "Upgrade Water Well to support more crops",
+
   "statements.soldOut": "Sold out",
   "statements.soldOutWearables": "View sold out wearables",
   "statements.craft.composter": "Craft at Composter",
@@ -3965,6 +3968,12 @@
   "upgrade.building": "Upgrade {{building}}",
   "upgrade.building.nextLevel": "Next Level:",
   "upgrade.intro": "Hey there bumpkin, looking to upgrade your {{building}} so you can get yourself some more {{animals}}?",
+  "upgrade.intro.water.well": "Hey there Bumpkin! Looking to upgrade your {{building}} to increase fertility of your plots?",
+  "upgrade.sheep.cows": "sheep and cows",
+  "upgrade.chickens": "chickens",
+  "upgrade.unlockAllPlots": "Unlocks all plot fertility",
+  "upgrade.plusPlotFertility": "+{{amount}} plot fertility",
+  "upgrade.capacityIncrease": "+{{amount}} capacity",
   "upgrade": "Upgrade",
   "animals.buy": "Buy {{animal}}",
   "capacity": "Capacity",
