[FEAT] Ronin Login

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3390,7 +3390,7 @@
   "statements.sflLim.one": "You have reached the daily SFL limit.",
   "statements.sflLim.two": "You can continue playing, but will need to wait until tomorrow to sync again.",
   "statements.sniped": "Oh no! Another player bought that trade before you.",
-  "statements.switchNetwork": "Add or Switch Network",
+  "statements.switchToPolygon": "Switch to Polygon",
   "statements.sync": "Please bear with us while we sync all of your data on chain.",
   "statements.tapCont": "Tap to continue",
   "statements.price.change": "Oh no! Looks like the price has changed, please try again!",
@@ -3569,6 +3569,8 @@
   "wallet.setupWeb3": "To access this feature, you must first setup a Web3 wallet",
   "wallet.wrongWallet": "Wrong Wallet",
   "wallet.connectedWrongWallet": "You are connected to the wrong wallet",
+  "wallet.changeWallet": "Change Wallet",
+  "wallet.selectWallet": "Select Wallet",
   "wallet.missingNFT": "Missing NFT",
   "wallet.requireFarmNFT": "Some actions require a Farm NFT. This helps keep all of your items secure on the Blockchain",
   "wallet.uniqueFarmNFT": "A unique farm NFT will be minted to store your progress",
