Fix Spanish description for Woody and Apprentice Beaver

--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -229,7 +229,7 @@
   "description.ayam.cemani.boost": "Aumenta la producción de huevos en +0.2",
   "description.rooster.boost": "Duplica la probabilidad de obtener un pollo mutante.",
   "description.undead.rooster.boost": "Aumenta la producción de huevos en +0.1.",
-  "description.woody.beaver.boost": "Aumenta la recolección de madera en un +20% y reduce el tiempo de recuperación de los árboles en un -50%.",
+  "description.woody.beaver.boost": "Aumenta la recolección de madera en un +20%.",
   "description.wood.nymph.wendy.boost": "Aumenta la producción de madera en +0.2.",
   "description.tiki.totem.boost": "Aumenta la producción de madera en +0.1",
   "description.tunnel.mole.boost": "Aumenta la recolección de piedra en +0.25.",
@@ -797,7 +797,7 @@
   "description.nyon.statue": "En memoria de Nyon Lann",
   "description.farmer.bath": "Un baño con aroma a remolacha para los granjeros",
   "description.woody.Beaver": "Aumenta las gotas de madera en un 20%",
-  "description.apprentice.beaver": "Los árboles se recuperan un 50% más rápido",
+  "description.apprentice.beaver": "Los árboles se recuperan un 50% más rápido y reduce el tiempo de recuperación de los árboles en un -50%.",
   "description.foreman.beaver": "Corta árboles sin hachas",
   "description.egg.basket": "Evento de Pascua",
   "description.mysterious.head": "Una estatua pensada para proteger a los agricultores",
