Update cooking buff to be more accurate

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5520,6 +5520,6 @@
   "ronin.nft.welcome": "Welcome Ronin Player!",
   "ronin.nft.description": "Your {{nftName}} comes with exclusive perks!",
   "ronin.nft.perkOne": "VIP Access",
-  "ronin.nft.perkTwo": "50% Faster Cooking",
+  "ronin.nft.perkTwo": "2x Faster Cooking",
   "ronin.nft.expires": "These perks won't last forever, so make the most of them while they last!"
 }
