Moles and Rock Golem Description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -933,10 +933,10 @@
   "description.foreman.beaver": "Cut trees without axes",
   "description.egg.basket": "Easter Event",
   "description.mysterious.head": "A statue thought to protect farmers",
-  "description.tunnel.mole": "Gives a 25% increase to stone mines",
-  "description.rocky.the.mole": "Gives a 25% increase to iron mines",
-  "description.nugget": "Gives a 25% increase to gold mines",
-  "description.rock.golem": "Gives a 10% chance to get 3x stone",
+  "description.tunnel.mole": "Gives a 0.25 increase to stone mines' yield",
+  "description.rocky.the.mole": "Gives a 0.25 increase to iron mines' yield",
+  "description.nugget": "Gives a 0.25 increase to gold mines' yield",
+  "description.rock.golem": "Gives a 10% chance to get +2 Stone",
   "description.chef.apron": "Gives 20% extra SFL selling cakes",
   "description.chef.hat": "La couronne d'un boulanger légendaire!",
   "description.nancy": "Keeps a few crows away. Crops grow 15% faster",
