Weather Items Description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5237,8 +5237,8 @@
   "temperateSeason.possibleEvents": "Possible Events",
   "description.tornadoPinwheel": "A magical pinwheel that protects you from the tornado! One-use only.",
   "description.mangrove": "A mangrove that protects you from the tsunami! One-use only.",
-  "description.thermalStone": "A thermal stone that protects you from the great freeze!",
-  "description.protectivePesticide": "A pesticide that protects your crops from the insect plague!",
+  "description.thermalStone": "A thermal stone that protects you from the great freeze! One-use only.",
+  "description.protectivePesticide": "A pesticide that protects your crops from the insect plague! One-use only.",
   "temperateSeason.weatherShop.weather": "Weather",
   "temperateSeason.weatherShop.buy.description": "Buy items to protect your farm from the weather",
   "temperateSeason.weatherShop.buy.comingSoon": "Coming soon - February 3rd",
