--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5480,7 +5480,7 @@
   "season.protectYourFarm": "You can purchase equipment to help you survive the weather.",
   "season.weatherEventsCanLastUpTo24Hours": "Weather events can last up to 24 hours.",
   "season.welcomeToTheWeatherShop": "Welcome to the Weather Shop! Here you can purchase equipment to help you survive special weather events.",
-  "season.PlaceProtectiveEquipment": "To survive weather events, place protective equipment on the farm and inside the house just before the event occurs.",
+  "season.PlaceProtectiveEquipment": "To survive weather events, place protective equipment on the farm or inside the house just before the event occurs.",
   "bounties.sfl.intro.one": "I'm Gilda, the bounty hunter of Infernos.",
   "bounties.sfl.intro.two": "I heard you silly Bumpkins are selling your Obsidian for SFL. Is that true?",
   "gorga.intro.greeting": "Ooooh a Bumpkin...that's new.",
