Genie Lamp Description (vitt0c suggestion)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -199,7 +199,7 @@
   "description.lunar.calendar": "Crops now follow the lunar cycle! 10% increase to crop growth speed.",
   "description.heart.davy.jones": "Whoever possesses it holds immense power over the seven seas, can dig for treasure without tiring.",
   "description.treasure.map": "An enchanted map that leads the holder to valuable treasure. +20% profit from beach bounty items.",
-  "description.genie.lamp": "A magical lamp that contains a genie who will grant you three wishes.",
+  "description.genie.lamp": "A magical lamp that contains a genie who will grant you three wishes and burn the lamp after the third wish. Wish list: Genie Bear, Pirate Bounty, Pearl, Bumpkin Roast, Goblin Brunch and Sand Drill x10",
   "description.basic.scarecrow": "Boost nearby Basic Crops.",
   "description.scary.mike": "Boost nearby Medium Crops.",
   "description.laurie.chuckle.crow": "Boost nearby Advanced Crops.",
@@ -312,7 +312,7 @@
   "description.alba.boost": "50% Chance of +1 Basic Fish",
   "description.knowledge.crab.boost": "Double Sprout Mix Boost Effect",
   "description.maneki.neko.boost": "1 Free Food per Day",
-  "description.genie.lamp.boost": "Grants 3 Wishes",
+  "description.genie.lamp.boost": "Grants 3 Wishes from the Wish list",
   "description.observatory.boost": "+5% XP",
   "description.blossombeard.boost": "+10% XP",
   "description.desertgnome.boost": "+10% Cooking Speed",
