[CHORE] Update Descriptions (#5296)
* Moles and Rock Golem Description

* Weather Items Description

* Weather Items Guide

* Fix Typo

* Genie Lamp Description (vitt0c suggestion)

* Mint your NFT Description

* Generate Metadata

* Fix trait_type

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -199,7 +199,7 @@
   "description.lunar.calendar": "Crops now follow the lunar cycle! 10% increase to crop growth speed.",
   "description.heart.davy.jones": "Whoever possesses it holds immense power over the seven seas, can dig for treasure without tiring.",
   "description.treasure.map": "An enchanted map that leads the holder to valuable treasure. +20% profit from beach bounty items.",
-  "description.genie.lamp": "A magical lamp that contains a genie who will grant you three wishes.",
+  "description.genie.lamp": "A magical lamp that contains a genie who will grant you three wishes and burn the lamp after the third wish. Wish list: Genie Bear, Pirate Bounty, Pearl, Bumpkin Roast, Goblin Brunch and Sand Drill x10",
   "description.basic.scarecrow": "Boost nearby Basic Crops.",
   "description.scary.mike": "Boost nearby Medium Crops.",
   "description.laurie.chuckle.crow": "Boost nearby Advanced Crops.",
@@ -312,7 +312,7 @@
   "description.alba.boost": "50% Chance of +1 Basic Fish",
   "description.knowledge.crab.boost": "Double Sprout Mix Boost Effect",
   "description.maneki.neko.boost": "1 Free Food per Day",
-  "description.genie.lamp.boost": "Grants 3 Wishes",
+  "description.genie.lamp.boost": "Grants 3 Wishes from the Wish list",
   "description.observatory.boost": "+5% XP",
   "description.blossombeard.boost": "+10% XP",
   "description.desertgnome.boost": "+10% Cooking Speed",
@@ -933,10 +933,10 @@
   "description.foreman.beaver": "Cut trees without axes",
   "description.egg.basket": "Easter Event",
   "description.mysterious.head": "A statue thought to protect farmers",
-  "description.tunnel.mole": "Gives a 25% increase to stone mines",
-  "description.rocky.the.mole": "Gives a 25% increase to iron mines",
-  "description.nugget": "Gives a 25% increase to gold mines",
-  "description.rock.golem": "Gives a 10% chance to get 3x stone",
+  "description.tunnel.mole": "Gives a 0.25 increase to stone mines' yield",
+  "description.rocky.the.mole": "Gives a 0.25 increase to iron mines' yield",
+  "description.nugget": "Gives a 0.25 increase to gold mines' yield",
+  "description.rock.golem": "Gives a 10% chance to get +2 Stone",
   "description.chef.apron": "Gives 20% extra SFL selling cakes",
   "description.chef.hat": "La couronne d'un boulanger légendaire!",
   "description.nancy": "Keeps a few crows away. Crops grow 15% faster",
@@ -3575,6 +3575,7 @@
   "wallet.missingNFT": "Missing NFT",
   "wallet.requireFarmNFT": "Some actions require a Farm NFT. This helps keep all of your items secure on the Blockchain",
   "wallet.uniqueFarmNFT": "A unique farm NFT will be minted to store your progress",
+  "wallet.RequiresPol": "Minting the farm NFT requires POL tokens on the Polygon network and in your farm's linked wallet",
   "wallet.mintFreeNFT": "Mint your NFT",
   "wallet.wrongChain": "Wrong Chain",
   "wallet.walletAlreadyLinked": "Wallet already linked",
@@ -5237,8 +5238,8 @@
   "temperateSeason.possibleEvents": "Possible Events",
   "description.tornadoPinwheel": "A magical pinwheel that protects you from the tornado! One-use only.",
   "description.mangrove": "A mangrove that protects you from the tsunami! One-use only.",
-  "description.thermalStone": "A thermal stone that protects you from the great freeze!",
-  "description.protectivePesticide": "A pesticide that protects your crops from the insect plague!",
+  "description.thermalStone": "A thermal stone that protects you from the great freeze! One-use only.",
+  "description.protectivePesticide": "A pesticide that protects your crops from the insect plague! One-use only.",
   "temperateSeason.weatherShop.weather": "Weather",
   "temperateSeason.weatherShop.buy.description": "Buy items to protect your farm from the weather",
   "temperateSeason.weatherShop.buy.comingSoon": "Coming soon - February 3rd",
@@ -5480,6 +5481,7 @@
   "season.protectYourFarm": "You can purchase equipment to help you survive the weather.",
   "season.weatherEventsCanLastUpTo24Hours": "Weather events can last up to 24 hours.",
   "season.welcomeToTheWeatherShop": "Welcome to the Weather Shop! Here you can purchase equipment to help you survive special weather events.",
+  "season.PlaceProtectiveEquipment": "To survive weather events, place protective equipment on the farm or inside the house just before the event occurs.",
   "bounties.sfl.intro.one": "I'm Gilda, the bounty hunter of Infernos.",
   "bounties.sfl.intro.two": "I heard you silly Bumpkins are selling your Obsidian for SFL. Is that true?",
   "gorga.intro.greeting": "Ooooh a Bumpkin...that's new.",
