--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2133,7 +2133,7 @@
   "goblinTrade.select": "Select resource to sell",
   "goblinTrade.hoarding": "Oh no! You've reached the max SFL.",
   "goblinTrade.vipRequired": "VIP Required",
-  "goblinTrade.vipDelivery": "Hmmm, looks like you are a basic Bumpkin. I only trade with VIPs.",
+  "goblinTrade.missingReputation.sflDelivery": "Hmmm, looks like you are a basic Bumpkin. I only trade with a Cropkeeper.",
   "goldTooth.intro.part1": "Arrr, me hearties! The treasure-diggin' area be teemin' with wealth and adventure, and it be openin' its gates soon for ye daring farmers!",
   "goldTooth.intro.part2": "Be ready to join me crew, for the hunt for riches begins shortly!",
   "greenhouse.oilDescription": "The greenhouse needs oil to grow plants.",
