--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4442,6 +4442,9 @@
   "chore.harvest.carrot.100": "Harvest Carrots 100 times",
   "chore.harvest.carrot.120": "Harvest Carrots 120 times",
 
+  "chore.harvest.yam.30": "Harvest Yam 30 times",
+  "chore.harvest.yam.60": "Harvest Yam 60 times",
+  "chore.harvest.yam.90": "Harvest Yam 90 times",
   "chore.harvest.yam.125": "Harvest Yam 125 times",
   "chore.harvest.yam.150": "Harvest Yam 150 times",
   "chore.harvest.yam.175": "Harvest Yam 175 times",
