--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5534,5 +5534,6 @@
   "news.winds.of.change.chapter": "Winds of Change Chapter",
   "news.winds.of.change.description": "The Winds of Change Chapter has begun. Compete for NFTs and rewards!",
   "news.title": "News",
-  "news.whatsOn": "What's happening in Sunflower Land?"
+  "news.whatsOn": "What's happening in Sunflower Land?",
+  "news.flowerSoon": "$FLOWER ERC20 is launching soon!"
 }
