--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4022,8 +4022,8 @@
   "skill.fruityProfit": "+50% coins from Tango's deliveries",
   "skill.loyalMacaw": "Double Macaw's effect",
   "skill.catchup": "-10% fruit growth time",
-  "skill.noAxeNoWorries.buff": "Chop fruit branches without axes",
-  "skill.noAxeNoWorries.debuff": "-1 wood from fruit branches",
+  "skill.noAxeNoWorries.buff": "Chop fruit branches and stems without axes",
+  "skill.noAxeNoWorries.debuff": "-1 wood from fruit branches and stems",
   "skill.fruityWoody": "+1 wood from fruit branches and stems",
   "skill.pearTurbocharge": "Double Immortal Pear's effect",
   "skill.crimeFruit": "+10 Tomato and Lemon seeds stock",
